<resources>
    <string name="app_name">KASA DEFTERİ</string>
    <string name="action_settings">MÜŞTERİ TABLOSU</string>
    <string name="hello_world"></string>
    <string name="Add_New">Müşteri Ekle</string>
    <string name="edit">Müşteri Güncelle</string>
    <string name="delete">Müşteri Sil</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Adı :</string>
    <string name="phone">Telefon:</string>
    <string name="email">Email :</string>
    <string name="street">T.C :</string>
    <string name="country">Hesap :</string>
    <string name="save">KAYDET</string>
    <string name="deleteContact">Bunu silmek istiyor musunuz .</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
</resources>
