<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.emrah.musterikayit.DisplayContact">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAdi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etAdi"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:inputType="text" />
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etTc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:ems="11"
                    android:layout_marginLeft="20dp"
                    android:maxLength="11"
                    android:inputType="number" />


            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editTextPhone"
                    android:layout_alignLeft="@+id/textView1"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:layout_marginLeft="5dp"
                    android:id="@+id/etTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:hint="05450000000"
                    android:ems="11"
                    android:maxLength="11"
                    android:inputType="phone|text" />



            </LinearLayout>


            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editTextEmail"
                    android:layout_alignLeft="@+id/textView1"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


                <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                    android:textStyle="bold"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />


        </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvHesap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/etHesap"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />


            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnKaydet"
                    android:background="@color/green"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnSaveClick"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
